updates for colors
 colors set brighter and new.

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
 
 .goldNav {
   background-color: #d69600 ;
-  color: #FFFAB7 !important;
+  color: #ffffff !important;
   text-decoration: none;
 }
 
@@ -56,11 +56,11 @@
 }
 .blueColor{
   color: #8AAAE5 !important;
-  background-color: #FEFEFE !important;
+  background-color: #F4F6FF !important;
 }
 .goldColor{
-  color: #d69600 !important;
-  background-color:#FFFAB7 !important;
+  color: #e29b00 !important;
+  background-color:#fffff8 !important;
 }
 .whiteColor{
   color: #99a5b1 !important;
